--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
               <section class="lead">
                   <h1 class="lead__title">Путешествия по России</h1>
                   <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-                  <img class="lead__image" alt="девушка в поезде, лежащая на нижней полке в плацкартном вагоне, лицом к окну." src="../ArthurTavasiev.github.io/images/lead/lead-polka.jpg">
+                  <img class="lead__image" alt="девушка в поезде, лежащая на нижней полке в плацкартном вагоне, лицом к окну." src="./images/lead/lead-polka.jpg">
                   <p class="lead__caption">ваша полка — верхняя</p>
               </section>
 
@@ -41,18 +41,18 @@
 
               <section class="photo-grid">
                   <ul class="photo-grid__list">
-                    <li class="photo-grid__list-item"><img class="photo-grid__list-image" alt="вид из окна движещегося поезда, против движения." src="../ArthurTavasiev.github.io/images/photo-grid/photo-grid-train.jpg"></li>
-                    <li class="photo-grid__list-item"><img class="photo-grid__list-image" alt="горные вершины в облаках, вид сверху." src="../ArthurTavasiev.github.io/images/photo-grid/photo-grid-atharva-tulsi.jpg"></li>
-                    <li class="photo-grid__list-item"><img class="photo-grid__list-image" alt="фото поля в утреннем тумане" src="../ArthurTavasiev.github.io/images/photo-grid/photo-grid-tuman.jpg"></li>
-                    <li class="photo-grid__list-item"><img class="photo-grid__list-image" alt="лесистые холмы в тумане" src="../ArthurTavasiev.github.io/images/photo-grid/photo-grid-sochi.jpg"></li>
-                    <li class="photo-grid__list-item"><img class="photo-grid__list-image" alt="фото машины на льду" src="../ArthurTavasiev.github.io/images/photo-grid/photo-grid-arisa.jpg"></li>
-                    <li class="photo-grid__list-item"><img class="photo-grid__list-image" alt="небережная озера Байкал" src="../ArthurTavasiev.github.io/images/photo-grid/photo-grid-baikal.jpg"></li>
-                    <li class="photo-grid__list-item"><img class="photo-grid__list-image" alt="гора Эльбрус" src="../ArthurTavasiev.github.io/images/photo-grid/photo-grid-elbrus.jpg"></li>
-                    <li class="photo-grid__list-item"><img class="photo-grid__list-image" alt="знак пешеходного перехода в северных снегах" src="../ArthurTavasiev.github.io/images/photo-grid/photo-grid-kondratiev.jpg"></li>
-                    <li class="photo-grid__list-item"><img class="photo-grid__list-image" alt="фото пара над каменистой поверхностью земли" src="../ArthurTavasiev.github.io/images/photo-grid/photo-grid-kamchatka-1.jpg"></li>
-                    <li class="photo-grid__list-item"><img class="photo-grid__list-image" alt="фото горы на заднем плане" src="../ArthurTavasiev.github.io/images/photo-grid/photo-grid-kamchatka-2.jpg"></li>
-                    <li class="photo-grid__list-item"><img class="photo-grid__list-image" alt="фото высокого утёса у берега озера Байкал" src="../ArthurTavasiev.github.io/images/photo-grid/photo-grid-baikal-2.jpg"></li>
-                    <li class="photo-grid__list-item"><img class="photo-grid__list-image" alt="горные вершины в тумане" src="../ArthurTavasiev.github.io/images/photo-grid/photo-grid-ergaki.jpg"></li>
+                    <li class="photo-grid__list-item"><img class="photo-grid__list-image" alt="вид из окна движещегося поезда, против движения." src="./images/photo-grid/photo-grid-train.jpg"></li>
+                    <li class="photo-grid__list-item"><img class="photo-grid__list-image" alt="горные вершины в облаках, вид сверху." src="./images/photo-grid/photo-grid-atharva-tulsi.jpg"></li>
+                    <li class="photo-grid__list-item"><img class="photo-grid__list-image" alt="фото поля в утреннем тумане" src="./images/photo-grid/photo-grid-tuman.jpg"></li>
+                    <li class="photo-grid__list-item"><img class="photo-grid__list-image" alt="лесистые холмы в тумане" src="./images/photo-grid/photo-grid-sochi.jpg"></li>
+                    <li class="photo-grid__list-item"><img class="photo-grid__list-image" alt="фото машины на льду" src="./images/photo-grid/photo-grid-arisa.jpg"></li>
+                    <li class="photo-grid__list-item"><img class="photo-grid__list-image" alt="небережная озера Байкал" src="./images/photo-grid/photo-grid-baikal.jpg"></li>
+                    <li class="photo-grid__list-item"><img class="photo-grid__list-image" alt="гора Эльбрус" src="./images/photo-grid/photo-grid-elbrus.jpg"></li>
+                    <li class="photo-grid__list-item"><img class="photo-grid__list-image" alt="знак пешеходного перехода в северных снегах" src="./images/photo-grid/photo-grid-kondratiev.jpg"></li>
+                    <li class="photo-grid__list-item"><img class="photo-grid__list-image" alt="фото пара над каменистой поверхностью земли" src="./images/photo-grid/photo-grid-kamchatka-1.jpg"></li>
+                    <li class="photo-grid__list-item"><img class="photo-grid__list-image" alt="фото горы на заднем плане" src="./images/photo-grid/photo-grid-kamchatka-2.jpg"></li>
+                    <li class="photo-grid__list-item"><img class="photo-grid__list-image" alt="фото высокого утёса у берега озера Байкал" src="./images/photo-grid/photo-grid-baikal-2.jpg"></li>
+                    <li class="photo-grid__list-item"><img class="photo-grid__list-image" alt="горные вершины в тумане" src="./images/photo-grid/photo-grid-ergaki.jpg"></li>
                   </ul>
               </section>
 
@@ -65,7 +65,7 @@
                           <p class="place__link"><a href="http://park-kosa.ru">park-kosa.ru</a></p>
                         </div>
                         <div class="place__image">
-                          <img alt="фото каменистого залива, со старыми корнями деревьев в воде." src="../ArthurTavasiev.github.io/images/place/place-kosa.jpg">
+                          <img alt="фото каменистого залива, со старыми корнями деревьев в воде." src="./images/place/place-kosa.jpg">
                         </div>
                         <div class="place__paragraphs">
                           <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного 
@@ -83,7 +83,7 @@
                           <p class="place__link"><a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a></p>
                         </div>
                         <div class="place__image">
-                          <img class="place__image" alt="фото морского прибоя на замёрзшем каменистом берегу." src="../ArthurTavasiev.github.io/images/place/place-kolsky.jpg">
+                          <img class="place__image" alt="фото морского прибоя на замёрзшем каменистом берегу." src="./images/place/place-kolsky.jpg">
                         </div>
                        <div class="place__paragraphs">
                           <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, 
@@ -101,7 +101,7 @@
                           <p class="place__link"><a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a></p>
                         </div>
                         <div class="place__image">
-                          <img class="place__image" alt="вид с веранды деревянного дома на густой лес и небольшое озеро." src="../ArthurTavasiev.github.io/images/place/place-altai.jpg">
+                          <img class="place__image" alt="вид с веранды деревянного дома на густой лес и небольшое озеро." src="./images/place/place-altai.jpg">
                         </div>
                         <div class="place__paragraphs">
                           <p class="place__paragraph">Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, 
@@ -119,7 +119,7 @@
                           <p class="place__link"><a href="https://vk.com/baikalmile">https://vk.com/baikalmile</a></p>
                         </div>
                         <div class="place__image">
-                          <img class="place__image" alt="фото поверхности замёзшего озера крупным планом." src="../ArthurTavasiev.github.io/images/place/place-winter-baikal.jpg">
+                          <img class="place__image" alt="фото поверхности замёзшего озера крупным планом." src="./images/place/place-winter-baikal.jpg">
                         </div>
                         <div class="place__paragraphs">
                           <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой 
@@ -136,7 +136,7 @@
                           <p class="place__link"><a href="http://vodlozero.ru">http://vodlozero.ru/</a></p>
                         </div>
                         <div class="place__image">
-                          <img class="place__image" alt="фото широкой реки в густых холмистых лесах." src="../ArthurTavasiev.github.io/images/place/place-karelia.jpg">
+                          <img class="place__image" alt="фото широкой реки в густых холмистых лесах." src="./images/place/place-karelia.jpg">
                         </div>
                         <div class="place__paragraphs">
                           <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт 
