--- a/index.html
+++ b/index.html
@@ -8,29 +8,29 @@
     </head>
     <body class="page">
         <header class="header">
-          <div class="header__logo"></div>
-          <a class="header__lang-link header__lang-link-active" href="#">Ru</a>
-          <a class="header__lang-link" href="#">En</a>
+          <div class="logo"></div>
+          <a class="link link__lang link__lang_active" href="#">Ru</a>
+          <a class="link link__lang" href="#">En</a>
         </header>
 
         <main>
           <section class="lead">
-            <h1 class="lead__title">Путешествия по России</h1>
-            <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-            <img class="lead__image" alt="девушка в поезде, лежащая на нижней полке в плацкартном вагоне, лицом к окну." src="./images/lead/lead-polka.jpg">
-            <p class="lead__caption">ваша полка — верхняя</p>
+            <h1 class=" title title__lead">Путешествия по России</h1>
+            <p class="subtitle subtitle__lead">Настоящая страна не в выпусках новостей, а здесь.</p>
+            <img class="image" alt="девушка в поезде, лежащая на нижней полке в плацкартном вагоне, лицом к окну." src="./images/lead/lead-polka.jpg">
+            <p class="caption">ваша полка — верхняя</p>
           </section>
 
           <section class="intro">
-            <h2 class="intro__title">Чего мы там не видели?</h2>
-            <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать,
+            <h2 class=" title title__intro">Чего мы там не видели?</h2>
+            <p class="text text__intro">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать,
               но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, 
               Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. 
               А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. 
               Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою 
               «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, 
               достойные вашего отпуска.</p>
-            <ul class="intro__list">
+            <ul class="list list__intro">
               <li>Часовых поясов 11</li>
               <li>Объектов природного наследия ЮНЕСКО 12</li>
               <li>Объектов культурного наследия ЮНЕСКО 16</li>
@@ -40,127 +40,127 @@
           </section>
 
           <section class="photo-grid">
-            <ul class="photo-grid__list">
-              <li class="photo-grid__list-item"><img class="photo-grid__list-image" alt="вид из окна движещегося поезда, против движения." src="./images/photo-grid/photo-grid-train.jpg"></li>
-              <li class="photo-grid__list-item"><img class="photo-grid__list-image" alt="горные вершины в облаках, вид сверху." src="./images/photo-grid/photo-grid-atharva-tulsi.jpg"></li>
-              <li class="photo-grid__list-item"><img class="photo-grid__list-image" alt="фото поля в утреннем тумане" src="./images/photo-grid/photo-grid-tuman.jpg"></li>
-              <li class="photo-grid__list-item"><img class="photo-grid__list-image" alt="лесистые холмы в тумане" src="./images/photo-grid/photo-grid-sochi.jpg"></li>
-              <li class="photo-grid__list-item"><img class="photo-grid__list-image" alt="фото машины на льду" src="./images/photo-grid/photo-grid-arisa.jpg"></li>
-              <li class="photo-grid__list-item"><img class="photo-grid__list-image" alt="небережная озера Байкал" src="./images/photo-grid/photo-grid-baikal.jpg"></li>
-              <li class="photo-grid__list-item"><img class="photo-grid__list-image" alt="гора Эльбрус" src="./images/photo-grid/photo-grid-elbrus.jpg"></li>
-              <li class="photo-grid__list-item"><img class="photo-grid__list-image" alt="знак пешеходного перехода в северных снегах" src="./images/photo-grid/photo-grid-kondratiev.jpg"></li>
-              <li class="photo-grid__list-item"><img class="photo-grid__list-image" alt="фото пара над каменистой поверхностью земли" src="./images/photo-grid/photo-grid-kamchatka-1.jpg"></li>
-              <li class="photo-grid__list-item"><img class="photo-grid__list-image" alt="фото горы на заднем плане" src="./images/photo-grid/photo-grid-kamchatka-2.jpg"></li>
-              <li class="photo-grid__list-item"><img class="photo-grid__list-image" alt="фото высокого утёса у берега озера Байкал" src="./images/photo-grid/photo-grid-baikal-2.jpg"></li>
-              <li class="photo-grid__list-item"><img class="photo-grid__list-image" alt="горные вершины в тумане" src="./images/photo-grid/photo-grid-ergaki.jpg"></li>
+            <ul class="list list__photo-grid">
+              <li><img class="image" alt="вид из окна движещегося поезда, против движения." src="./images/photo-grid/photo-grid-train.jpg"></li>
+              <li><img class="image" alt="горные вершины в облаках, вид сверху." src="./images/photo-grid/photo-grid-atharva-tulsi.jpg"></li>
+              <li><img class="image" alt="фото поля в утреннем тумане" src="./images/photo-grid/photo-grid-tuman.jpg"></li>
+              <li><img class="image" alt="лесистые холмы в тумане" src="./images/photo-grid/photo-grid-sochi.jpg"></li>
+              <li><img class="image" alt="фото машины на льду" src="./images/photo-grid/photo-grid-arisa.jpg"></li>
+              <li><img class="image" alt="небережная озера Байкал" src="./images/photo-grid/photo-grid-baikal.jpg"></li>
+              <li><img class="image" alt="гора Эльбрус" src="./images/photo-grid/photo-grid-elbrus.jpg"></li>
+              <li><img class="image" alt="знак пешеходного перехода в северных снегах" src="./images/photo-grid/photo-grid-kondratiev.jpg"></li>
+              <li><img class="image" alt="фото пара над каменистой поверхностью земли" src="./images/photo-grid/photo-grid-kamchatka-1.jpg"></li>
+              <li><img class="image" alt="фото горы на заднем плане" src="./images/photo-grid/photo-grid-kamchatka-2.jpg"></li>
+              <li><img class="image" alt="фото высокого утёса у берега озера Байкал" src="./images/photo-grid/photo-grid-baikal-2.jpg"></li>
+              <li><img class="image" alt="горные вершины в тумане" src="./images/photo-grid/photo-grid-ergaki.jpg"></li>
             </ul>
           </section>
 
-          <section class="places">
-            <ul class="places__list">
-              <li class="place">
-                <h2 class="place__title">Куршская коса</h2>
+          <section class="place">
+            <ul class="list list__place">
+              <li class="list__place_item">
+                <h2 class="title title__place">Куршская коса</h2>
                 <div class="place__website">
                   <p class="place__url-heading">URL</p>
-                  <p class="place__link"><a href="http://park-kosa.ru">park-kosa.ru</a></p>
+                  <p class="place__link"><a class="link link__place" href="http://park-kosa.ru">park-kosa.ru</a></p>
                 </div>
-                <div class="place__image">
-                  <img alt="фото каменистого залива, со старыми корнями деревьев в воде." src="./images/place/place-kosa.jpg">
+                <div>
+                  <img class="image image__place" alt="фото каменистого залива, со старыми корнями деревьев в воде." src="./images/place/place-kosa.jpg">
                 </div>
                 <div class="place__paragraphs">
-                  <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного 
+                  <p class="text text__place">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного 
                       Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. 
                       Уникальная природная зона на краю российского анклава.</p>
-                  <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же 
+                  <p class="text text__place">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же 
                       по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских 
                       городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>   
                 </div>
               </li>
-              <li class="place">
-                <h2 class="place__title">Кольский</h2>
+              <li class="list__place_item">
+                <h2 class="title title__place">Кольский</h2>
                 <div class="place__website">
                   <p class="place__url-heading">URL</p>
-                  <p class="place__link"><a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a></p>
+                  <p class="place__link"><a class="link link__place" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a></p>
                 </div>
-                <div class="place__image">
-                  <img class="place__image" alt="фото морского прибоя на замёрзшем каменистом берегу." src="./images/place/place-kolsky.jpg">
+                <div>
+                  <img class="image image__place" alt="фото морского прибоя на замёрзшем каменистом берегу." src="./images/place/place-kolsky.jpg">
                 </div>
                 <div class="place__paragraphs">
-                  <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, 
+                  <p class="text text__place">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, 
                     а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
-                  <p class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. 
+                  <p class="text text__place">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. 
                     Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались 
                     пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть 
                     северное сияние начинает сбываться с билетом в Мурманск.</p>
                 </div>   
               </li>
-              <li class="place">
-                <h2 class="place__title">Алтай</h2>
+              <li class="list__place_item">
+                <h2 class="title title__place">Алтай</h2>
                 <div class="place__website">
                   <p class="place__url-heading">URL</p>
-                  <p class="place__link"><a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a></p>
+                  <p class="place__link"><a class="link link__place" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a></p>
                 </div>
-                <div class="place__image">
-                  <img class="place__image" alt="вид с веранды деревянного дома на густой лес и небольшое озеро." src="./images/place/place-altai.jpg">
+                <div>
+                  <img class="image image__place" alt="вид с веранды деревянного дома на густой лес и небольшое озеро." src="./images/place/place-altai.jpg">
                 </div>
                 <div class="place__paragraphs">
-                  <p class="place__paragraph">Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, 
+                  <p class="text text__place">Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, 
                     вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с 
                     невидимым чудом здешних мест — горным воздухом.</p>
-                  <p class="place__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие 
+                  <p class="text text__place">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие 
                     местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. 
                     И знаменитые манулы — тоже обитатели Алтайского края.</p>  
                 </div> 
               </li>
-              <li class="place">
-                <h2 class="place__title">Зимний Байкал</h2>
+              <li class="list__place_item">
+                <h2 class="title title__place">Зимний Байкал</h2>
                 <div class="place__website">
                   <p class="place__url-heading">URL</p>
-                  <p class="place__link"><a href="https://vk.com/baikalmile">https://vk.com/baikalmile</a></p>
+                  <p class="place__link"><a class="link link__place" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a></p>
                 </div>
-                <div class="place__image">
-                  <img class="place__image" alt="фото поверхности замёзшего озера крупным планом." src="./images/place/place-winter-baikal.jpg">
+                <div>
+                  <img class="image image__place" alt="фото поверхности замёзшего озера крупным планом." src="./images/place/place-winter-baikal.jpg">
                 </div>
                 <div class="place__paragraphs">
-                  <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой 
+                  <p class="text text__place">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой 
                     источник пресной воды и одно из красивейших мест в России.</p>
-                  <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. 
+                  <p class="text text__place">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. 
                     Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как можно бóльшую скорость 
                     на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>  
                 </div> 
               </li>
-              <li class="place">
-                <h2 class="place__title">Карелия</h2>
+              <li class="list__place_item">
+                <h2 class="title title__place">Карелия</h2>
                 <div class="place__website">
                   <p class="place__url-heading">URL</p>
-                  <p class="place__link"><a href="http://vodlozero.ru">http://vodlozero.ru/</a></p>
+                  <p class="place__link"><a class="link link__place" href="http://vodlozero.ru">http://vodlozero.ru/</a></p>
                 </div>
-                <div class="place__image">
-                  <img class="place__image" alt="фото широкой реки в густых холмистых лесах." src="./images/place/place-karelia.jpg">
+                <div>
+                  <img class="image image__place" alt="фото широкой реки в густых холмистых лесах." src="./images/place/place-karelia.jpg">
                 </div>
                 <div class="place__paragraphs">
-                  <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт 
+                  <p class="text text__place">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт 
                     западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых 
                     болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему 
                     солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы. А на редких 
                     тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
-                </div>   
+                </div>
               </li>
             </ul>
           </section>
 
           <section class="cover">
-            <h2 class="cover__title"></body> <a class="cover__title-link" href="https://stampsy.com/na-elektrichkakh-do-baikala">До Байкала «на собаках»</a></h2>
-            <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+            <h2 class="title title__cover"></body> <a class="link link__cover" href="https://stampsy.com/na-elektrichkakh-do-baikala">До Байкала «на собаках»</a></h2>
+            <p class="subtitle subtitle__cover">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
           </section>
         </main>
         <footer class="footer">
-          <ul class="footer__links">
-            <li class="footer__link"><a href="https://yandex.ru/maps">Карты</a></li>
-            <li class="footer__link"><a href="https://yandex.ru/pogoda">Погода</a></li>
-            <li class="footer__link"><a href="https://rasp.yandex.ru">Расписание</a></li>
-            <li class="footer__link"><a href="https://calendar.yandex.ru">Календарь</a></li>
-            <li class="footer__link"><a href="https://travel.yandex.ru">Путешествия</a></li>
+          <ul class="list list__footer">
+            <li class="footer__link"><a class="link link__footer" href="https://yandex.ru/maps">Карты</a></li>
+            <li class="footer__link"><a class="link link__footer" href="https://yandex.ru/pogoda">Погода</a></li>
+            <li class="footer__link"><a class="link link__footer" href="https://rasp.yandex.ru">Расписание</a></li>
+            <li class="footer__link"><a class="link link__footer" href="https://calendar.yandex.ru">Календарь</a></li>
+            <li class="footer__link"><a class="link link__footer" href="https://travel.yandex.ru">Путешествия</a></li>
           </ul>
           <p class="footer__copyright">&copy; 2020. Впишите своё имя</p>
         </footer>
