--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
           </section>
 
           <section class="cover">
-            <a class="link cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
-            <img class="image cover__image" alt="таварняк на закате" src="../russian-travel/images/cover/cover-trains.jpg">
+            <a class="link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
+            <img class="image" alt="таварняк на закате" src="../russian-travel/images/cover/cover-trains.jpg">
             <div class="cover__wrap">
             <h2 class="title cover__title">До Байкала «на собаках»</h2>
             <p class="subtitle cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
