Прописал картинке cover новый путь

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           </section>
 
           <section class="intro">
-            <h2 class=" title intro__title">Чего мы там не видели?</h2>
+            <h2 class="title intro__title">Чего мы там не видели?</h2>
             <p class="text intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать,
               но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, 
               Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. 
@@ -31,11 +31,11 @@
               «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, 
               достойные вашего отпуска.</p>
             <ul class="list intro__list">
-              <li><span class="intro__list_bold">Часовых поясов</span> 11</li>
-              <li><span class="intro__list_bold">Объектов природного наследия ЮНЕСКО</span> 12</li>
-              <li><span class="intro__list_bold">Объектов культурного наследия ЮНЕСКО</span> 16</li>
-              <li><span class="intro__list_bold">Природных заповедников</span> 105</li>
-              <li><span class="intro__list_bold">Аэропортов</span> 241</li>
+              <li><span class="intro__accent-bold">Часовых поясов</span> 11</li>
+              <li><span class="intro__accent-bold">Объектов природного наследия ЮНЕСКО</span> 12</li>
+              <li><span class="intro__accent-bold">Объектов культурного наследия ЮНЕСКО</span> 16</li>
+              <li><span class="intro__accent-bold">Природных заповедников</span> 105</li>
+              <li><span class="intro__accent-bold">Аэропортов</span> 241</li>
             </ul>
           </section>
 
@@ -151,7 +151,7 @@
 
           <section class="cover">
             <a class="link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
-            <img class="image" alt="таварняк на закате" src="../russian-travel/images/cover/cover-trains.jpg">
+            <img class="image" alt="таварняк на закате" src="./images/cover/cover-trains.jpg">
             <div class="cover__wrap">
             <h2 class="title cover__title">До Байкала «на собаках»</h2>
             <p class="subtitle cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
