--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           </section>
 
           <section class="place">
-            <ul class="list place__list">
+            <ul class="list">
               <li class="place__list-item">
                 <h2 class="title place__title">Куршская коса</h2>
                 <div class="place__website">
@@ -68,10 +68,10 @@
                   <img class="image place__image" alt="фото каменистого залива, со старыми корнями деревьев в воде." src="./images/place/place-kosa.jpg">
                 </div>
                 <div class="place__paragraphs">
-                  <p class="text place__text">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного 
+                  <p class="place__text">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного 
                       Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. 
                       Уникальная природная зона на краю российского анклава.</p>
-                  <p class="text place__text">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же 
+                  <p class="place__text">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же 
                       по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских 
                       городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>   
                 </div>
@@ -86,9 +86,9 @@
                   <img class="image place__image" alt="фото морского прибоя на замёрзшем каменистом берегу." src="./images/place/place-kolsky.jpg">
                 </div>
                 <div class="place__paragraphs">
-                  <p class="text place__text">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, 
+                  <p class="place__text">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, 
                     а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
-                  <p class="text place__text">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. 
+                  <p class="place__text">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. 
                     Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались 
                     пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть 
                     северное сияние начинает сбываться с билетом в Мурманск.</p>
@@ -104,10 +104,10 @@
                   <img class="image place__image" alt="вид с веранды деревянного дома на густой лес и небольшое озеро." src="./images/place/place-altai.jpg">
                 </div>
                 <div class="place__paragraphs">
-                  <p class="text place__text">Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, 
+                  <p class="place__text">Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, 
                     вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с 
                     невидимым чудом здешних мест — горным воздухом.</p>
-                  <p class="text place__text">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие 
+                  <p class="place__text">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие 
                     местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. 
                     И знаменитые манулы — тоже обитатели Алтайского края.</p>  
                 </div> 
@@ -122,9 +122,9 @@
                   <img class="image place__image" alt="фото поверхности замёзшего озера крупным планом." src="./images/place/place-winter-baikal.jpg">
                 </div>
                 <div class="place__paragraphs">
-                  <p class="text place__text">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой 
+                  <p class="place__text">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой 
                     источник пресной воды и одно из красивейших мест в России.</p>
-                  <p class="text place__text">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. 
+                  <p class="place__text">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. 
                     Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как можно бóльшую скорость 
                     на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>  
                 </div> 
@@ -139,7 +139,7 @@
                   <img class="image place__image" alt="фото широкой реки в густых холмистых лесах." src="./images/place/place-karelia.jpg">
                 </div>
                 <div class="place__paragraphs">
-                  <p class="text place__text">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт 
+                  <p class="place__text">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт 
                     западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых 
                     болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему 
                     солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы. А на редких 
